# replib

./: .gitignore  ProjectHome.md  README.md  RepLib.cabal  RepLib.md  cabal.project  stack.yaml
Data/: RepLib.hs
Data/RepLib/: Derive.hs  Lib.hs  PreludeLib.hs  PreludeReps.hs  R.hs  R1.hs  RepAux.hs  Vec.hs
Data/RepLib/Bind/: LocallyNameless.hs  LocallyNameless2.hs  Nominal.hs  Perm-old.hs  Perm.hs  PermFT.hs  PermM.hs  PermR.hs
Data/RepLib/SYB/: Aliases.hs  Schemes.hs
Generics/RepLib/: Derive.hs  R.hs  R1.hs
Generics/RepLib/Bind/: Fresh.hs  LocallyNameless.hs  LocallyNameless2.hs  Name.hs  Nominal.hs  NominalName.hs  Perm.hs  PermM.hs  PermR.hs  Util.hs
Generics/RepLib/Bind/LocallyNameless/: Alpha.hs  Internal.hs  Name.hs  Ops.hs  Subst.hs  Test.hs  Types.hs
Generics/RepLib/Bind/Nominal/: Internal.hs
Generics/RepLib/SYB/: Schemes.hs
RepLib/: CHANGELOG  README  RepLib.cabal
RepLib/Generics/: RepLib.hs
RepLib/Generics/RepLib/: AbstractReps.hs  Derive.hs  Lib.hs  PreludeLib.hs  PreludeReps.hs  R.hs  R1.hs  RepAux.hs  Unify.hs
RepLib/Generics/RepLib/Bind/: Util.hs
RepLib/Generics/RepLib/Bind/LocallyNameless/: Alpha.hs  Types.hs
RepLib/Generics/RepLib/SYB/: Aliases.hs  Schemes.hs
Unbound/: CHANGES  LICENSE  PermTest.hs  README  unbound.cabal
Unbound/Examples/: Basic.hs  DepCalc.hs  Functor.hs  Issue15.hs  Issue28.hs  Main.hs  TaggedTerm.hs
Unbound/Unbound/: DynR.hs  Fresh.hs  LocallyNameless.hs  Name.hs  Nominal.hs  PermM.hs  Util.hs
Unbound/Unbound/LocallyNameless/: Alpha.hs  Fresh.hs  Name.hs  Ops.hs  Subst.hs  Types.hs
Unbound/Unbound/Nominal/: Alpha.hs  Fresh.hs  Internal.hs  Name.hs  Ops.hs  Subst.hs  Test.hs  Types.hs
Unbound/doc/HCAR/: Unbound-BU.tex  unbound.tex
Unbound/examples/: Abstract.hs  Basic.hs  DepCalc.hs  LC.hs  Main.hs  STLC.hs  Set.hs  functor.hs
Unbound/test/: Abstract.hs  NominalTest.hs  Test.hs
branches/0.2/RepLib/: LICENSE
branches/0.2/RepLib/Generics/RepLib/: PreludeLib.hs  Vec.hs
branches/0.2/Unbound/: CHANGES  README  unbound.cabal
branches/0.2/Unbound/Unbound/LocallyNameless/: Name.hs
branches/0.2/Unbound/examples/: Abstract.hs  Basic.hs  LC.hs  LCRec.hs  LF.hs  STLC.hs
examples/: DepCalc.hs  F.hs  LC-smallstep.hs  LC.hs  LCRec.hs  LF.hs  STLC.hs  UnifyExp.hs  abstract.hs  issue15.hs
meta/: Makefile  Unbound_thy.v
tags/0.2.2/RepLib/: RepLib.cabal
tags/0.2.2/RepLib/Generics/RepLib/: PreludeReps.hs
tags/0.2.2/Unbound/Unbound/: Nominal.hs
tags/0.2.2/Unbound/Unbound/LocallyNameless/: Types.hs
tags/0.2.2/Unbound/examples/: abstract.hs
tags/0.2.2/Unbound/tutorial/: Makefile
tags/0.2.3/RepLib/Generics/RepLib/SYB/: Aliases.hs
tags/0.2.3/Unbound/: LICENSE  unbound.cabal
tags/0.2.3/Unbound/Unbound/LocallyNameless/: Alpha.hs
tags/0.2.3/Unbound/examples/: Main.hs  UnifyExp.hs
tags/0.2.3/Unbound/tutorial/: Tutorial.lhs
test/: GADT.hs
trunk/: LICENSE  README  RepLib.cabal
trunk/Data/: RepLib.hs
trunk/Data/RepLib/: Derive.hs  Lib.hs  PreludeLib.hs  PreludeReps.hs  R.hs  R1.hs  RepAux.hs  Unify.hs  Vec.hs
trunk/Data/RepLib/Bind/: LocallyNameless.hs  LocallyNameless2.hs  Nominal.hs  Perm.hs
trunk/Data/RepLib/SYB/: Aliases.hs
trunk/Generics/RepLib/: Lib.hs  RepAux.hs  Unify.hs
trunk/Generics/RepLib/Bind/: Fresh.hs  LocallyNameless.hs  Nominal.hs  NominalName.hs  PermM.hs
trunk/Generics/RepLib/Bind/LocallyNameless/: Alpha.hs  Fresh.hs  Internal.hs  Ops.hs  Subst.hs  Test.hs  Types.hs
trunk/RepLib/: README  RepLib.cabal
trunk/RepLib/Generics/: RepLib.hs
trunk/RepLib/Generics/RepLib/: Derive.hs  Lib.hs  PreludeReps.hs  R.hs  R1.hs  RepAux.hs
trunk/RepLib/Generics/RepLib/Bind/LocallyNameless/: Name.hs
trunk/RepLib/Generics/RepLib/SYB/: Aliases.hs
trunk/Unbound/: CHANGES  unbound.cabal
trunk/Unbound/Unbound/: Fresh.hs  LocallyNameless.hs  Name.hs  Nominal.hs  PermM.hs  Util.hs
trunk/Unbound/Unbound/LocallyNameless/: Alpha.hs  Fresh.hs  Name.hs  Ops.hs  Subst.hs  Test.hs  Types.hs
trunk/Unbound/Unbound/Nominal/: Internal.hs  LFresh.hs  Types.hs
trunk/Unbound/doc/HCAR/: Unbound-BU.tex  unbound.tex
trunk/Unbound/examples/: Basic.hs  F.hs  Functor2.hs  LC-smallstep.hs  LF.hs  STLC.hs  Vec.hs
trunk/Unbound/tutorial/: Tutorial.lhs
trunk/examples/: Basic.hs  DepCalc.hs  F.hs  LC-smallstep.hs  LC.hs  LCRec.hs  LF.hs  Main.hs  STLC.hs  abstract.hs  functor2.hs
trunk/meta/: Unbound.ott  Unbound.v  Unbound_results.v  Unbound_thy.v
trunk/test/: Reify.hs
trunk/tutorial/: Tutorial.lhs
tutorial/: Tutorial.lhs
wiki/: RepLib.wiki
