name:           RepLib
version:        0.3
license:        LGPL
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.2.3
tested-with:    GHC == 7.0.1
author:         Stephanie Weirich
maintainer:     Chris Casinghino <ccasin@cis.upenn.edu>
                Brent Yorgey <byorgey@cis.upenn.edu>
                Stephanie Weirich <sweirich@cis.upenn.edu>
homepage:       http://www.cis.upenn.edu/~sweirich/RepLib
category:       Generics
extra-source-files: README, examples/Main.hs, examples/UnifyExp.hs
synopsis:       Generic programming library with representation types
description:    Generic programming library providing structural
                polymorphism and other features.

Library
  build-depends: base >= 4.2 && < 5, 
                 template-haskell >= 2.4 && < 2.6, mtl >= 1.1 && < 2.1,
                 containers >= 0.3 && < 0.5
  exposed-modules:
    Generics.RepLib,
    Generics.RepLib.R,
    Generics.RepLib.R1,
    Generics.RepLib.Lib,
    Generics.RepLib.PreludeReps,
    Generics.RepLib.PreludeLib,
    Generics.RepLib.RepAux,
    Generics.RepLib.Derive,
    Generics.RepLib.SYB.Aliases,
    Generics.RepLib.SYB.Schemes,
    Generics.RepLib.Unify,
    Generics.RepLib.Bind.Nominal,
    Generics.RepLib.Bind.LocallyNameless,
    Generics.RepLib.Bind.PermM
  extensions: GADTs
