name:           RepLib
version:        0.5.4.1
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
tested-with:    GHC == 7.0.4,
                GHC == 7.2.1,
                GHC == 7.4.1,
                GHC == 7.6.1,
                GHC == 7.8.1,
                GHC == 7.8.3,
                GHC == 7.10.2,
                GHC == 8.0.1,
                GHC == 8.2.2,
                GHC == 8.4.3,
                GHC == 8.6.1
author:         Stephanie Weirich
maintainer:     Stephanie Weirich <sweirich@cis.upenn.edu>
homepage:       https://github.com/sweirich/replib
category:       Generics
extra-source-files: README
synopsis:       Generic programming library with representation types
description:    Generic programming library providing structural
                polymorphism and other features.

Source-repository head
  type: git
  location: https://github.com/sweirich/replib

Library
  build-depends: base >= 4.3 && < 5,
                 template-haskell >= 2.4 && < 2.15,
                 mtl >= 2.0 && < 2.3,
                 containers >= 0.4 && < 0.6,
                 transformers

  if impl(ghc < 7.8)
    build-depends: type-equality >= 0.1.0.2 && < 0.2

  exposed-modules:
    Generics.RepLib,
    Generics.RepLib.R,
    Generics.RepLib.R1,
    Generics.RepLib.Lib,
    Generics.RepLib.PreludeReps,
    Generics.RepLib.PreludeLib,
    Generics.RepLib.RepAux,
    Generics.RepLib.Derive,
    Generics.RepLib.SYB.Aliases,
    Generics.RepLib.SYB.Schemes,
    Generics.RepLib.Unify,
    Generics.RepLib.AbstractReps
  default-extensions: GADTs
  other-extensions: ExistentialQuantification
                    IncoherentInstances
                    OverlappingInstances
                    RankNTypes
                    ScopedTypeVariables
                    ScopedTypeVariables
                    TemplateHaskell
                    UndecidableInstances
  default-language: Haskell2010
