name:           RepLib
version:        0.3
license:        LGPL
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.2.3
tested-with:    GHC == 6.12.1
author:         Stephanie Weirich
maintainer:     Chris Casinghino <ccasin@cis.upenn.edu>
                Brent Yorgey <byorgey@cis.upenn.edu>
                Stephanie Weirich <sweirich@cis.upenn.edu>
homepage:       http://www.cis.upenn.edu/~sweirich/RepLib
category:       Data
extra-source-files: README, examples/Main.hs, examples/UnifyExp.hs
synopsis:       Generic programming library with representation types
description:    Generic programming library providing structural
                polymorphism and other features.

Library
  build-depends: base >= 4.2 && < 5, 
                 template-haskell >= 2.4 && < 2.5, mtl >= 1.1 && < 2.1,
                 fingertree >= 0.0.1 && < 0.1, containers >= 0.3 && < 0.4
  exposed-modules:
    Data.RepLib,
    Data.RepLib.R,
    Data.RepLib.R1,
    Data.RepLib.Lib,
    Data.RepLib.PreludeReps,
    Data.RepLib.PreludeLib,
    Data.RepLib.RepAux,
    Data.RepLib.Derive,
    Data.RepLib.SYB.Aliases,
    Data.RepLib.SYB.Schemes,
    Data.RepLib.Unify,
    Data.RepLib.Bind.Nominal,
    Data.RepLib.Bind.LocallyNameless,
    Data.RepLib.Bind.Perm,
    Data.RepLib.Bind.PermM
  extensions: GADTs
