name:           RepLib
version:        0.5
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.6
tested-with:    GHC == 7.0.1, GHC == 7.0.3, GHC == 7.0.4
author:         Stephanie Weirich
maintainer:     Brent Yorgey <byorgey@cis.upenn.edu>
                Chris Casinghino <ccasin@cis.upenn.edu>
                Stephanie Weirich <sweirich@cis.upenn.edu>
homepage:       http://code.google.com/p/replib/
category:       Generics
extra-source-files: README
synopsis:       Generic programming library with representation types
description:    Generic programming library providing structural
                polymorphism and other features.

Source-repository head
  type: svn
  location: http://replib.googlecode.com/svn/trunk/

Library
  build-depends: base >= 4.3 && < 5, 
                 template-haskell >= 2.4 && < 2.6, 
                 mtl >= 2.0 && < 2.1,
                 type-equality >= 0.1.0.2 && < 0.2,
                 containers >= 0.4 && < 0.5
  exposed-modules:
    Generics.RepLib,
    Generics.RepLib.R,
    Generics.RepLib.R1,
    Generics.RepLib.Lib,
    Generics.RepLib.PreludeReps,
    Generics.RepLib.PreludeLib,
    Generics.RepLib.RepAux,
    Generics.RepLib.Derive,
    Generics.RepLib.SYB.Aliases,
    Generics.RepLib.SYB.Schemes,
    Generics.RepLib.Unify
  extensions: GADTs
